<resources>
    <string name="app_name" translatable="false">vendor</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="select_category">Select Category</string>
    <string name="product">Product</string>
    <string name="yyyy_mm_dd" translatable="false">yyyy-mm-dd</string>
    <string name="sells_report">Sell\'s Report</string>
    <string name="help_center">Help Center</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="langauge">English</string>
    <string name="menu_home">Dashboard</string>
    <string name="cancelled_orders">Cancelled Order</string>
    <string name="on_delivery">On Delivery</string>
    <string name="completed_order">Completed Order</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="shop_name">Shop Name</string>
    <string name="hour_minute">hour:minute</string>
    <string name="remove">Remove</string>

</resources>