<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/baseline_content_paste_24"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_add_chart_24"
            android:title="@string/sells_report" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/faq"/>
    </group>
</menu>