<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.campusrider.vendor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.campusrider.vendor.ui.Product.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.campusrider.vendor.ui.SellReport.SalesReportFragment"
        android:label="@string/sells_report"
        tools:layout="@layout/fragment_sales_report" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.campusrider.vendor.ui.help.HelpFragment"
        android:label="@string/help_center"
        tools:layout="@layout/fragment_help" />
</navigation>